--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
     <title>La Cuisine</title>
     <link rel="stylesheet" href="/assets/style.css">
     <script src="assets/script.js" defer></script>
+    
 </head>
 <body>
+    <!-- NAVIGATION BAR -->
+    <nav class="navMenu">
+        <div class="navLogo"><img src="assets/img/Lac-Icon.png" alt="LAC-Icon"> <h2>LA Cuisine</h2></div>
+        <div class="navButtons">
+            <ul>
+                <li>STARTERS</li>
+                <li>MEALS</li>
+                <li>DESSERT</li>
+                <li>WINE</li>
+                <li>KONTAKT</li>
+            </ul>
+        </div>
+    </nav>
+    
     <header>
 
     </header>
@@ -20,7 +35,5 @@
     <footer>
 
     </footer>
-
-
 </body>
 </html>
