--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>La Cuisine</title>
     <link rel="stylesheet" href="/assets/style.css">
     <script src="assets/script.js" defer></script>
-    
 </head>
 <body>
     <!-- NAVIGATION BAR -->
@@ -28,6 +27,20 @@
         <div class="bgimage">
             <div class="headerContent">
                 <h1>La Cuisine</h1>
+            </div>
+            <div class="boxes">
+                <div class="box-one">
+                    Box one
+                </div>
+                <div class="box-one">
+                    Box one
+                </div>
+                <div class="box-one">
+                    Box one
+                </div>
+                <div class="box-one">
+                    Box one
+                </div>
             </div>
 
 
