--- a/index.html
+++ b/index.html
@@ -29,18 +29,26 @@
                 <h1>La Cuisine</h1>
             </div>
             <div class="boxes">
-                <div class="box-one">
-                    Box one
-                </div>
-                <div class="box-one">
-                    Box one
-                </div>
-                <div class="box-one">
-                    Box one
-                </div>
-                <div class="box-one">
-                    Box one
-                </div>
+                <a href="#starters">
+                    <div class="box-one">
+                        <h2>Starters</h2>
+                    </div>
+                </a>
+                <a href="#mainCourse">
+                    <div class="box-two">
+                        <h2>Main Meals</h2>
+                    </div>
+                </a>
+                <a href="#desserts">
+                    <div class="box-three">
+                        <h2>Desserts</h2>
+                    </div>
+                </a>
+                <a href="#wines">
+                    <div class="box-four">
+                        <h2>Winebar</h2>
+                    </div>
+                </a>
             </div>
 
 
